# rknn

./: README.en.md  README.md  readme.md
lubancat_ai_manual_code/: .gitattributes  .gitignore  .gitlab-ci.yml  README.md
lubancat_ai_manual_code/base/: README.md
lubancat_ai_manual_code/base/handwritten/c++/: main.cc
lubancat_ai_manual_code/base/handwritten/model/RK356X/: handwritten.rknn
lubancat_ai_manual_code/base/handwritten/model/RK3588/: handwritten.rknn
lubancat_ai_manual_code/base/vit/: rknn_Inference.py
lubancat_ai_manual_code/dev_env/: README.md
lubancat_ai_manual_code/example/: README.md
lubancat_ai_manual_code/example/garbage_detection/: README.md  onnx2rknn.py
lubancat_ai_manual_code/example/garbage_detection/cpp/: CMakeLists.txt  image_utils.c  postprocess.cc  postprocess.h  taco_yolov8_seg.cc  taco_yolov8seg_videocapture.cc
lubancat_ai_manual_code/example/garbage_detection/image/: image.txt
lubancat_ai_manual_code/example/garbage_detection/taco/: dataset_info.py  taco-seg.yaml  taco2yolo.py  yolov8n-seg-taco.yaml
lubancat_ai_manual_code/example/picodet/: README.md
lubancat_ai_manual_code/example/ppocrv3/: README.md
lubancat_ai_manual_code/example/ppocrv4/: convert_cls.py  convert_det.py  convert_rec.py
lubancat_ai_manual_code/example/ppocrv4/cpp/: CMakeLists.txt  build-linux.sh  image_utils.c  main.cc  postprocess.cc  ppocr_system.h
lubancat_ai_manual_code/example/ppocrv4/cpp/rknpu2/: ppocr_system.cc
lubancat_ai_manual_code/example/ppocrv4/model/: ch_ppocr_mobile_v2.0_cls_rk3588.rknn  ppocrv4_det_rk3588.rknn
lubancat_ai_manual_code/example/ppseg/cpp/: CMakeLists.txt  build_linux.sh  main.cc
lubancat_ai_manual_code/example/ppseg/cpp/rknpu2/: ppseg.cc
lubancat_ai_manual_code/example/ppyoloe/: test.py
lubancat_ai_manual_code/example/rt-detr/cpp/: CMakeLists.txt  postprocess.cc  postprocess.h  rtdetr.h  rtdetr_image_demo.cc
lubancat_ai_manual_code/example/rt-detr/cpp/rknpu2/: rtdetr.cc
lubancat_ai_manual_code/example/rt-detr/python/: onnx2rknn.py
lubancat_ai_manual_code/example/yolo11/cpp/: yolo11_videocapture_demo.cc
lubancat_ai_manual_code/example/yolov10/: onnx2rknn.py
lubancat_ai_manual_code/example/yolov10/cpp/: CMakeLists.txt  build-linux.sh
lubancat_ai_manual_code/example/yolov10/cpp/include/: postprocess.h  yolov10.h
lubancat_ai_manual_code/example/yolov10/cpp/src/: postprocess.cc  yolov10.cc  yolov10_image.cc  yolov10_image_demo.cc  yolov10_videocapture_demo.cc
lubancat_ai_manual_code/example/yolov5_seg/: dataset.txt  onnx2rknn.py  pt2rknn.py  test.py
lubancat_ai_manual_code/example/yolov5_seg/cpp/: CMakeLists.txt  build-linux.sh  image_utils.c  postprocess.h  yolov5_seg.h  yolov5seg_demo.cc  yolov5seg_videocapture_demo.cc
lubancat_ai_manual_code/example/yolov5_seg/cpp/rknpu2/: yolov5_seg.cc
lubancat_ai_manual_code/example/yolov5face/cpp/: CMakeLists.txt  build-linux.sh  main.cc  yolov5face.h
lubancat_ai_manual_code/example/yolov5face/cpp/rknpu2/: yolov5face.cc
lubancat_ai_manual_code/example/yolov5face/python/: export_onnx.py  onnx2rknn.py
lubancat_ai_manual_code/example/yolov8/: README.md
lubancat_ai_manual_code/example/yolov8-obb/: onnx2rknn.py
lubancat_ai_manual_code/example/yolov8-obb/cpp/: CMakeLists.txt
lubancat_ai_manual_code/example/yolov8-obb/cpp/inc/: postprocess.h
lubancat_ai_manual_code/example/yolov8-obb/cpp/src/: postprocess.cc  yolov8_obb.cc  yolov8_obb_image.cc
lubancat_ai_manual_code/example/yolox/: README.md
lubancat_ai_manual_code/example/yolox/cpp/: CMakeLists.txt  build_linux.sh  rknn_yolox_image.cc  yolox_videocapture_demo.cc
lubancat_ai_manual_code/example/yolox/cpp/rknpu2/: yolox.cc
rknn-toolkit-lite2/: CHANGELOG.txt
rknn-toolkit-lite2/examples/resnet18/: test.py  test_image.py  test_video.py
rknn-toolkit-lite2/examples/yolov5_inference/: test.py  test_yolov5.py
rknn-toolkit2/examples/onnx/yolov5/: test.py
rknn-toolkit2/examples/pytorch/yolov5/: README.md
yolov5/: detect.py  export.py  frame.py  train.py
yolov5/dataset/: data.yaml
yolov5/models/: yolo.py
